WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38896
[GTK] Theme does not render when printing
https://bugs.webkit.org/show_bug.cgi?id=38896
Summary
[GTK] Theme does not render when printing
Alejandro G. Castro
Reported
2010-05-11 03:56:56 PDT
The theme rendering is using the gdkdrawable from the expose event, when printing there is no expose event rendering, the result is the theme (buttons, combos, etc.) are not printed. WebCore/platform/gtk/RenderThemeGtk.cpp: ... if (!i.context->gdkDrawable()) return true; ...
Attachments
Proposed patch
(5.36 KB, patch)
2010-05-12 03:03 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Proposed patch
(3.50 KB, patch)
2010-05-12 03:13 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
Patch
(2.98 KB, patch)
2010-05-13 01:02 PDT
,
Alejandro G. Castro
xan.lopez
: review+
xan.lopez
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2010-05-12 03:03:02 PDT
Created
attachment 55822
[details]
Proposed patch
WebKit Review Bot
Comment 2
2010-05-12 03:05:26 PDT
Attachment 55822
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/gtk/RenderThemeGtk.cpp:288: Declaration has space between type name and * in GdkDrawable *pixmap [whitespace/declaration] [3] WebCore/platform/gtk/RenderThemeGtk.cpp:293: Use 0 instead of NULL. [readability/null] [5] WebCore/platform/gtk/RenderThemeGtk.cpp:330: Declaration has space between type name and * in cairo_t *cr [whitespace/declaration] [3] WebCore/platform/gtk/RenderThemeGtk.cpp:322: An else statement can be removed when the prior "if" concludes with a return, break, continue or goto statement. [readability/control_flow] [4] Total errors found: 4 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alejandro G. Castro
Comment 3
2010-05-12 03:13:20 PDT
Created
attachment 55825
[details]
Proposed patch
Xan Lopez
Comment 4
2010-05-12 05:13:57 PDT
Comment on
attachment 55825
[details]
Proposed patch We can use GRefPtr for the pixmap, so r- to do that. It also seems when there's no expose event and printing is disabled we'll create a pixmap just to immediately destroy it, which seems a bit pointless.
Alejandro G. Castro
Comment 5
2010-05-13 01:02:45 PDT
Created
attachment 55955
[details]
Patch
Xan Lopez
Comment 6
2010-05-13 01:19:58 PDT
Comment on
attachment 55955
[details]
Patch Looks good to me.
Alejandro G. Castro
Comment 7
2010-05-13 02:40:35 PDT
Landed on commit 59356.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug