2010-05-13  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Xan Lopez.

        In case there is no expose event we render the theme in a pixmap
        and copy it to the cairo context. This is slow but it is used just
        in case we are printing nowadays.

        [GTK] Theme does not render when printing
        https://bugs.webkit.org/show_bug.cgi?id=38896

        * platform/gtk/RenderThemeGtk.cpp:
        (WebCore::paintMozillaGtkWidget):

Canonical link: https://commits.webkit.org/50545@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59356 268f45cc-cd09-0410-ab3c-d52691b4dbfc